--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -25,7 +25,7 @@
       <a href="#">Features</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
-    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    <a href="index.html"> <img class="logo" src="img/logo.png" alt="Great Idea! Company logo."> </a>
 
     </div>
   </nav>
@@ -118,13 +118,14 @@
 
 </div>
 </section>
+<section class="services-bottom">
   <div class="services-facts">
     <h4>Some Facts About Our Services</h4>
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
     eleifend. Mauris euismod facilisis iaculis.</p>
     <br>
-  </div>
-  <div>
+  
+  
     <ul>
     <li>Awesome thing</li>
     <br>
@@ -135,10 +136,12 @@
     <li>Great thing</li>
     </ul>
   </div>
+<div>
+  <img class="services-infoimg" src="img/services-info.png" alt="one of our employees hard at work">
+</div>
+</section>
 
-<img class="services-infoimg" src="img/services-info.png" alt="one of our employees hard at work">
-
-Copyright Great Idea! 2018
+<div class="services-copyright">Copyright Great Idea! 2018</div>
 
 </div>
 </body>
